fixed flicker problem with MSIE

--- a/web/style2.css
+++ b/web/style2.css
@@ -484,6 +484,7 @@ td.logobutton
     text-align: right;
     padding-top: 5px;
     padding-right: 20px;
+    width: 180px;
 }
 
 tr.navtablespacer
